Fixed navbar overlap for fullwidth

--- a/app/sass/partials/_settings.scss
+++ b/app/sass/partials/_settings.scss
@@ -1367,7 +1367,7 @@ $topbar-bg: #2D2D2D;
 
 // Height and margin
 $topbar-height: 60px;
-$topbar-margin-bottom: -2.5%;
+// $topbar-margin-bottom: -2.5%;
 
 
 // Controlling the styles for the title in the top bar
